Trying everything I can to prevent double-tap selection on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 *, div, canvas {
   -webkit-touch-callout: none;
+  -webkit-user-callout: none;
   -webkit-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-modify: none;
+  -webkit-highlight: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   touch-action: none;
   box-sizing: border-box;
   flex: 0 0 auto;
